--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=dl6k7adglr">
     </script>
 
-    <title>React App</title>
+    <title>zzupzzup</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
