--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,10 @@
       type="text/javascript"
       src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=dl6k7adglr">
     </script>
+    <script 
+      type="text/javascript" 
+      src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=YOUR_CLIENT_ID&submodules=geocoder">
+    </script>
 
     <title>zzupzzup</title>
   </head>
